4.1.0
- PVR API v5.3.0: Add implementation for GetDescrambleInfo
- PVR API v5.3.0: Adapt definition of epg based timer rule (Added PVR_TIMER_TYPE_SUPPORTS_ANY_CHANNEL attribute)

4.0.17
- Fixed timer/recordings lifetime special values mapping ("until space needed", "forever")

4.0.16
- Added support for genre to recordings

4.0.15
- Added support for 'default' recording priority setting value

4.0.14
- Readded server based play count/position for recordings (HTSP v27 and up)

4.0.13
- PVR API: Removed unused addon interface function

4.0.12
- Updated Debian package control
- PVR API: addon callback changes

4.0.11
- PVR API: Removed obsolete version functions

4.0.10
- set dependency version values automatically during build
- PVR API: Removed unused addon interface functions

4.0.9
- fixed: timeshift state and data calculation if demuxer is not active (e.g. when playing a recording)

4.0.8
- revert server based playstatus, tvheadend is not compatible at the moment

4.0.7
- fixed duplicate 'prevent duplicate episodes' timer settings values

4.0.6
- added HTSP v26 support 
- added server based playstatus for recordings (HTSP v26 and up)

4.0.5
- fix CTvheadend::DemuxIsTimeShifting

4.0.4
- improved: use the default retention (from server configuration)
- improved: buffering method when timeshifting
- fixed: possible empty duplicate detection field when opening a timer rule
- fixed: possible time offset when tuning a channel with predictive tuning enabled

4.0.3
- fixed unresponsiveness when wrong credentials are used

4.0.2
- updated build instructions in the README
- fixed Travis CI and AppVeyor automated builds
- fixed a bunch of cast warnings
- cleanup stream handling somewhat

4.0.1
- updated language files from Transifex

4.0.0
- Initial Kodi v18 version

3.4.10
- Adpations for PVR API v5.2.1

3.4.9
- Updated to PVR API v5.2.1 (just made it compile again)

3.4.8
- improve EPG loading performance

3.4.7
- updated language files from Transifex

3.4.6